--- a/HI-IBOutlet-Demo/HI-IBOutlet-Demo/Base.lproj/Main.storyboard
+++ b/HI-IBOutlet-Demo/HI-IBOutlet-Demo/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <state key="normal" title="My button">
-                                    <color key="titleColor" red="0.36862745099999999" green="0.62352941179999999" blue="0.7843137255" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.87058823529999996" green="0.0" blue="0.36078431370000003" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="changeColor:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xQM-oP-WS9"/>
@@ -37,31 +37,31 @@
                                 <rect key="frame" x="24" y="90" width="272" height="272"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VNN-4F-bFm" userLabel="Top Square">
-                                        <rect key="frame" x="90" y="0.0" width="91" height="90.5"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <rect key="frame" x="90" y="0.0" width="91" height="91"/>
+                                        <color key="backgroundColor" red="0.0" green="0.90964889530000004" blue="0.52605503799999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="VNN-4F-bFm" secondAttribute="height" multiplier="1:1" id="KGp-G3-PmX"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bsm-u0-Niz" userLabel="Left V space">
-                                        <rect key="frame" x="0.0" y="90" width="45.5" height="182"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <rect key="frame" x="0.0" y="90" width="46" height="182"/>
+                                        <color key="backgroundColor" red="0.0" green="0.90964889530000004" blue="0.52605503799999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4TA-M6-BiC" userLabel="Right V space">
-                                        <rect key="frame" x="227" y="90" width="45.5" height="182"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4TA-M6-BiC" userLabel="Right V space">
+                                        <rect key="frame" x="227" y="90" width="46" height="182"/>
+                                        <color key="backgroundColor" red="0.0" green="0.90964889530000004" blue="0.52605503799999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tex-kE-Pzo" userLabel="Left H space">
                                         <rect key="frame" x="0.0" y="90" width="91" height="46"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="0.0" green="0.90964889530000004" blue="0.52605503799999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QS6-LD-Y36" userLabel="Right H space">
                                         <rect key="frame" x="181" y="90" width="91" height="46"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="0.0" green="0.90964889530000004" blue="0.52605503799999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hQu-Wj-Bid" userLabel="Bottom space">
                                         <rect key="frame" x="90" y="227" width="91" height="45"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="0.0" green="0.90964889530000004" blue="0.52605503799999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </view>
                                 </subviews>
                                 <constraints>
@@ -92,14 +92,25 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current color" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DgU-if-laf">
-                                <rect key="frame" x="24" y="386" width="272" height="20.5"/>
+                                <rect key="frame" x="24" y="386" width="272" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Uo-gV-XuK">
+                                <rect key="frame" x="141" y="422" width="39" height="30"/>
+                                <state key="normal" title="Reset"/>
+                                <connections>
+                                    <action selector="resetButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DhE-qs-rbt"/>
+                                </connections>
+                            </button>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="qz1-y8-ylD">
+                                <rect key="frame" x="101" y="466" width="118" height="31"/>
+                            </slider>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.0" green="0.90964889530000004" blue="0.52605503799999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="5Uo-gV-XuK" firstAttribute="top" secondItem="DgU-if-laf" secondAttribute="bottom" constant="15" id="4Dh-G1-UjT"/>
                             <constraint firstItem="voF-8C-PZU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="24" id="9Tr-Dh-BE1"/>
                             <constraint firstItem="Khr-LL-SPL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="16" id="9cX-5l-aNN"/>
                             <constraint firstAttribute="trailing" secondItem="voF-8C-PZU" secondAttribute="trailing" constant="24" id="Hjf-Tx-oTm"/>
@@ -107,12 +118,14 @@
                             <constraint firstItem="DgU-if-laf" firstAttribute="leading" secondItem="voF-8C-PZU" secondAttribute="leading" id="Qe8-OB-Owy"/>
                             <constraint firstItem="voF-8C-PZU" firstAttribute="top" secondItem="Khr-LL-SPL" secondAttribute="bottom" constant="24" id="eJs-hg-bUa"/>
                             <constraint firstItem="Khr-LL-SPL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="o17-LW-Lgx"/>
+                            <constraint firstItem="5Uo-gV-XuK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tNV-lI-gF6"/>
                             <constraint firstItem="DgU-if-laf" firstAttribute="trailing" secondItem="voF-8C-PZU" secondAttribute="trailing" id="tPg-Hw-jtc"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="awesomeView" destination="voF-8C-PZU" id="nvu-DN-pAZ"/>
                         <outlet property="changeButtonColor" destination="Khr-LL-SPL" id="s1W-Co-u5i"/>
+                        <outlet property="label" destination="DgU-if-laf" id="6B3-bf-GWY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
