--- a/HI-IBOutlet-Demo/HI-IBOutlet-Demo/Base.lproj/Main.storyboard
+++ b/HI-IBOutlet-Demo/HI-IBOutlet-Demo/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
@@ -91,41 +92,68 @@
                                     <constraint firstItem="Bsm-u0-Niz" firstAttribute="height" secondItem="voF-8C-PZU" secondAttribute="height" multiplier="2:3" id="y7f-Dp-cQf"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Uo-gV-XuK">
+                                <rect key="frame" x="141" y="408" width="39" height="30"/>
+                                <state key="normal" title="Reset"/>
+                                <connections>
+                                    <action selector="resetButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DhE-qs-rbt"/>
+                                </connections>
+                            </button>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="qz1-y8-ylD">
+                                <rect key="frame" x="101" y="460" width="118" height="31"/>
+                                <connections>
+                                    <action selector="sliderRed:" destination="BYZ-38-t0r" eventType="valueChanged" id="8be-9g-zhY"/>
+                                </connections>
+                            </slider>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="7tz-s1-zbt">
+                                <rect key="frame" x="101" y="498" width="118" height="31"/>
+                                <connections>
+                                    <action selector="sliderGreen:" destination="BYZ-38-t0r" eventType="valueChanged" id="K4I-p5-St0"/>
+                                </connections>
+                            </slider>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Pvf-dn-tvK">
+                                <rect key="frame" x="101" y="530" width="118" height="31"/>
+                                <connections>
+                                    <action selector="sliderBlue:" destination="BYZ-38-t0r" eventType="valueChanged" id="3zF-X9-YiD"/>
+                                </connections>
+                            </slider>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current color" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DgU-if-laf">
                                 <rect key="frame" x="24" y="386" width="272" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Uo-gV-XuK">
-                                <rect key="frame" x="141" y="422" width="39" height="30"/>
-                                <state key="normal" title="Reset"/>
-                                <connections>
-                                    <action selector="resetButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DhE-qs-rbt"/>
-                                </connections>
-                            </button>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="qz1-y8-ylD">
-                                <rect key="frame" x="101" y="466" width="118" height="31"/>
-                            </slider>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.90964889530000004" blue="0.52605503799999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="7tz-s1-zbt" secondAttribute="bottom" constant="40" id="20j-SH-Xr1"/>
+                            <constraint firstItem="qz1-y8-ylD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2lE-dz-S1O"/>
                             <constraint firstItem="5Uo-gV-XuK" firstAttribute="top" secondItem="DgU-if-laf" secondAttribute="bottom" constant="15" id="4Dh-G1-UjT"/>
                             <constraint firstItem="voF-8C-PZU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="24" id="9Tr-Dh-BE1"/>
                             <constraint firstItem="Khr-LL-SPL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="16" id="9cX-5l-aNN"/>
+                            <constraint firstItem="Pvf-dn-tvK" firstAttribute="top" secondItem="7tz-s1-zbt" secondAttribute="bottom" constant="2" id="DRj-Fv-aXZ"/>
+                            <constraint firstItem="7tz-s1-zbt" firstAttribute="leading" secondItem="Pvf-dn-tvK" secondAttribute="leading" id="H5v-YX-IM1"/>
                             <constraint firstAttribute="trailing" secondItem="voF-8C-PZU" secondAttribute="trailing" constant="24" id="Hjf-Tx-oTm"/>
+                            <constraint firstItem="7tz-s1-zbt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="M0o-Rn-RCX"/>
                             <constraint firstItem="DgU-if-laf" firstAttribute="top" secondItem="voF-8C-PZU" secondAttribute="bottom" constant="24" id="Pm6-Nw-3Jr"/>
+                            <constraint firstItem="7tz-s1-zbt" firstAttribute="leading" secondItem="qz1-y8-ylD" secondAttribute="leading" id="Q4o-mu-O6r"/>
                             <constraint firstItem="DgU-if-laf" firstAttribute="leading" secondItem="voF-8C-PZU" secondAttribute="leading" id="Qe8-OB-Owy"/>
                             <constraint firstItem="voF-8C-PZU" firstAttribute="top" secondItem="Khr-LL-SPL" secondAttribute="bottom" constant="24" id="eJs-hg-bUa"/>
+                            <constraint firstItem="Pvf-dn-tvK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jev-BW-Plw"/>
                             <constraint firstItem="Khr-LL-SPL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="o17-LW-Lgx"/>
                             <constraint firstItem="5Uo-gV-XuK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tNV-lI-gF6"/>
                             <constraint firstItem="DgU-if-laf" firstAttribute="trailing" secondItem="voF-8C-PZU" secondAttribute="trailing" id="tPg-Hw-jtc"/>
+                            <constraint firstItem="7tz-s1-zbt" firstAttribute="top" secondItem="qz1-y8-ylD" secondAttribute="bottom" constant="8" symbolic="YES" id="tYG-V0-99S"/>
+                            <constraint firstItem="7tz-s1-zbt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="87" id="yId-AZ-Yt1"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="awesomeView" destination="voF-8C-PZU" id="nvu-DN-pAZ"/>
                         <outlet property="changeButtonColor" destination="Khr-LL-SPL" id="s1W-Co-u5i"/>
                         <outlet property="label" destination="DgU-if-laf" id="6B3-bf-GWY"/>
+                        <outlet property="sliderBlue" destination="Pvf-dn-tvK" id="665-c0-MI4"/>
+                        <outlet property="sliderGreen" destination="7tz-s1-zbt" id="Cpy-Ve-Dqr"/>
+                        <outlet property="sliderRed" destination="qz1-y8-ylD" id="qCQ-Z5-gS5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
